(library
 (name zzdatatype)
 (wrapped true)
 (libraries core)
 (modules
   zarray
   zlabeled_tree
   zlist
   zmap
   zset
   ztree
   ztailcall
   zbinomialhp
   zpairinghp
   zphysicistsq
   zrealtimeq
   zskewhp
   datatype
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
)

;; never installed executables
(executables
  (names example)
  (modules example)
  (libraries zzdatatype))
